--- a/content/08_Regression.ipynb
+++ b/content/08_Regression.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "<img src=\"images/regression_general.png\" alt=\"Example for Classification\" style=\"width: 600px;\"/>\n",
     "\n",
-    "We have a set of instances for which features are known. In regression analysis, the features are also often called the *independent variables*. We want to know the relationship between the features and a *dependent variable*, i.e., our value of interest. In the figure above, $x$ is our feature and $y$ is our dependent variable. Through the regression model we can describe how $y$ changes, when $x$ changes. The example shows a *linear regression*, i.e., regression through a linear model, which is a line in two dimensions. \n",
+    "We have a set of instances for which features are known. In regression analysis, the features are also often called the *independent variables*. We want to know the relationship between the features and a *dependent variable*, i.e., our value of interest. In the figure above, $x$ is our feature and $y$ is our dependent variable. Through the regression model we can describe how $y$ changes, when $x$ changes. The example shows a *Linear Regression*, i.e., regression through a linear model, which is a line in two dimensions. \n",
     "\n",
     "### The Formal Problem\n",
     "\n",
@@ -33,7 +33,7 @@
    "source": [
     "## Performance of Regressions\n",
     "\n",
-    "Same as with regression, an important question is how we can estimate if a regression function is a good approximation of the dependent variable. We discuss the performance of linear regression using the two examples below. "
+    "Same as with classification, an important question is how we can estimate if a regression function is a good approximation of the dependent variable. We discuss the performance of Linear Regression using the two examples below. "
    ]
   },
   {
@@ -123,7 +123,7 @@
     "\n",
     "### Visual Performance Assessment\n",
     "\n",
-    "The plots above already show the first way, the quality of a regression model can be assessed. We can plot the actual data and the regression function together in the same plot. Through this, we can see if the regression is close to the actual data and, therefore, likely a good fit. Moreover, we can see systematic errors in the regression. In the good result, we see that the actual data is evenly scattered around the regression line without a large deviation. Hence, we can see that there are small errors in the regression model, but there is no clearly discernable pattern in these errors. This is different for the bad result: at the beginning, the instances are all above the blue line, between 0.4 and 0.7 the instances are below the blue line and at the end the instances are, again, all above the blue line. This clear pattern is a strong indicator for a bad fit, because there is clearly an aspect of the data that is not covered by the regression model. When the instances are all above the blue regression line, we say that the regression function *under predicts*, when the instances are all below the regression line, we say that the regression function *over predicts*.  \n",
+    "The plots above already show the first method for the assessment of the quality of a regression model. We can plot the actual data and the regression function together in the same plot. Through this, we can see if the regression is close to the actual data and, therefore, likely a good fit. Moreover, we can see systematic errors in the regression. In the good result, we see that the actual data is evenly scattered around the regression line without a large deviation. Hence, we can see that there are small errors in the regression model, but there is no clearly discernable pattern in these errors. This is different for the bad result: at the beginning, the instances are all above the blue line, between 0.4 and 0.7 the instances are below the blue line and at the end the instances are, again, all above the blue line. This clear pattern is a strong indicator for a bad fit, because there is clearly an aspect of the data that is not covered by the regression model. When the instances are all above the blue regression line, we say that the regression function *under predicts*, when the instances are all below the regression line, we say that the regression function *over predicts*.  \n",
     "\n",
     "Another way to look at the results of a prediction model visually is through the *residuals*. The residual of an instance $x \\in \\mathcal{F}$ for a regression function $f$ is defined as\n",
     "\n",
@@ -240,7 +240,7 @@
     "\n",
     "The MAE measures the absolute difference between the predictions and the actual values. The similar measure MSE uses the squared distances instead of the actual distances. Because the MSE uses the squared residuals, it is more sensitive to outliers in the residuals than MAE. Thus, MSE increases strongly with outliers, while these may be hidden with MAE. The biggest problem with MAE and MSE is that both are absolute measures for the error and, thus, hard to interpret because there is no fixed reference point. The performance measures for classification were mostly distributed in the interval [0,1] and it was clear what a perfect result looks like and what the worst possible result looks like. To interpret MAE and MSE, detailed knowledge about the dependent variable is required, especially about the scale of the dependent variable and the meaning of differences. \n",
     "\n",
-    "In that respect, $R^2$ is more similar to the metrics we know from classification and is distributed in the interval [0,1], where 1 is a perfect value. $R^2$ answers the question how much better the regression function is than just using the arithmetic mean of the data. The sum in the denominator is over the residuals of the arithmetic mean as the regression function. In the nominator, we have the sum of the residuals of the regression. If we would divide both the nominator and denominator by $|X|$, we would have the MSE as nominator and the variance as denominator. In other words, $R^2$ measures the ratio of MSE the model and the variance of the dependent variable. The lower the MSE in relation to the variance, the better.\n",
+    "In that respect, $R^2$ is more similar to the metrics we know from classification and is distributed in the interval [0,1], where 1 is a perfect value. $R^2$ answers the question how much better the regression function is than just using the arithmetic mean of the data. The sum in the denominator is over the residuals of the arithmetic mean as the regression function. In the nominator, we have the sum of the residuals of the regression. If we would divide both the nominator and denominator by $|X|$, we would have the MSE as nominator and the variance as denominator. In other words, $R^2$ measures the ratio of the MSE of the model and the variance of the dependent variable. The lower the MSE in relation to the variance, the better.\n",
     "\n",
     "A weakness of $R^2$ is that this usually decreases with more features, which can lead to overfitting. Adjusted $R^2$ addresses this weakness by taking the number of features into account. Thus, if the decrease in MSE is less than the penalty of adjusted $R^2$ for the number of features, adjusted $R^2$ increases. \n",
     "\n",
@@ -308,19 +308,19 @@
    "source": [
     "## Linear Regression\n",
     "\n",
-    "We already encountered linear regression, e.g., in [Chapter 7](07_Classification) when we discussed Logistic Regression or in the example above. We now take a closer look at how linear regression works. The formula of the regression function of linear regression is\n",
+    "We already encountered Linear Regression, e.g., in [Chapter 7](07_Classification) when we discussed Logistic Regression or in the example above. We now take a closer look at how Linear Regression works. The formula of the regression function of Linear Regression is\n",
     "\n",
     "$$y = b_0 + b_1x_1 + ... + b_mx_m = b_0 + \\sum_{i=1}^m b_ix_i$$\n",
     "\n",
     "with *coefficients* $b_1, ..., b_m \\in \\mathbb{R}$ and the *intercept* $b_0$. The coefficients define how a feature influences the dependent variable. The coefficients are closely related to the correlation between the dependent variable and the features. Usually, a positive coefficient means that the feature is positively correlated to the dependent variable, a negative coefficient means that there is a negative correlation. However, there are also exceptions to this general rule, as we will see in the next sections. \n",
     "\n",
-    "The intercept is \"base value\" of the dependent variable, i.e., the value of the dependent variable if all features would be zero. This concept can be visualized as the location where a regression line *intercepts* the axis of the coordinate system. \n",
+    "The intercept is the \"base value\" of the dependent variable, i.e., the value of the dependent variable if all features would be zero. This concept can be visualized as the location where a regression line *intercepts* the axis of the coordinate system. \n",
     "\n",
     "The key aspect of Linear Regression is how the coefficients and intercept are determined, as this can affect not only the quality of the regression function, but also how the coefficients may be interpreted. \n",
     "\n",
     "### Ordinary Least Squares\n",
     "\n",
-    "The standard way to estimate the coefficients of linear regression is using the *Ordinary Least Squares* (OLS) method. For this, we interpret the instance as matrix and the dependent variables and coefficients as vectors:\n",
+    "The standard way to estimate the coefficients of Linear Regression is using the *Ordinary Least Squares* (OLS) method. For this, we interpret the instance as matrix and the dependent variables and coefficients as vectors:\n",
     "\n",
     "$$\n",
     "\\begin{split}\n",
@@ -352,7 +352,7 @@
     "- Solution 3: $b_0 = 0, b_1=0, b_2=1$\n",
     "- Solution 4: $b_0 = 0, b_1=10000, b_2=-9999$\n",
     "\n",
-    "In general, any solution with $b_0=0$ and $b_1+b_2=1$ is optimal. The first three solutions we listed seem reasonable. However, a solution with very large coefficients is also possible and optimal. This also demonstrates that the coefficients of features can be misleading in terms correlation with the dependent variable, because in the example above $b_1$ and $b_2$ can assume any real value and, thus indicate any possible correlation. \n",
+    "In general, any solution with $b_0=0$ and $b_1+b_2=1$ is optimal. The first three solutions we listed seem reasonable. However, a solution with very large coefficients is also possible and optimal. This also demonstrates that the coefficients of features can be misleading in terms of correlation with the dependent variable. In the example above $b_1$ and $b_2$ can assume any real value and, thus indicate any possible correlation. \n",
     "\n",
     "### Ridge\n",
     "\n",
@@ -372,7 +372,7 @@
     "\n",
     "### Lasso\n",
     "\n",
-    "Another commonly used regularization technique is *lasso*. While ridge leads to small coefficients, of the correlated variables are still both non-zero. A model with similar performance, that uses fewer features is often better, because the likelihood of overfitting is reduced. The goal of lasso is to not only minimize the coefficient values of correlated variables, but to achieve that they become exactly zero. For this, the OLS problem is modified such that\n",
+    "Another commonly used regularization technique is *lasso*. While ridge leads to small coefficients, the correlated variables are still both non-zero. A model with similar performance, that uses fewer features is often better, because the likelihood of overfitting is reduced. The goal of lasso is to not only minimize the coefficient values of correlated variables, but to achieve that they become exactly zero. For this, the OLS problem is modified such that\n",
     "\n",
     "$$\\min ||b_0 + Xb - y||_2^2 + \\alpha ||b||_1,$$\n",
     "\n",
@@ -386,7 +386,7 @@
     "\n",
     "> Note:\n",
     "> \n",
-    "> We do not provide a detailed explanation of why Ridge only minimizes the values of the coefficients, while Lasso tries to find coefficients that are exactly zero, here. The short explanation is that the regularization term can also be considered as a constraint on optimization problem. The shape of this constraint is a circle for Ridge and a diamond for Lasso, because that is the shape of the unit circles of the Euclidean and the Manhattan norm. Due to the diamond shape, values of exactly zero are likely with Lasso. A full explanation for this, can, e.g., be found [here](https://towardsdatascience.com/ridge-and-lasso-regression-a-complete-guide-with-python-scikit-learn-e20e34bcbf0b).\n",
+    "> We do not provide a detailed explanation of why Ridge only minimizes the values of the coefficients, while Lasso tries to find coefficients that are exactly zero, here. The short explanation is that the regularization term can also be considered as a constraint on the optimization problem. The shape of this constraint is a circle for Ridge and a diamond for Lasso, because that is the shape of the unit circles of the Euclidean and the Manhattan norm. Due to the diamond shape, values of exactly zero are likely with Lasso. A full explanation for this, can, e.g., be found [here](https://towardsdatascience.com/ridge-and-lasso-regression-a-complete-guide-with-python-scikit-learn-e20e34bcbf0b).\n",
     "\n",
     "### Elastic Net\n",
     "\n",
@@ -398,7 +398,7 @@
     "\n",
     "### Impact of Regularization\n",
     "\n",
-    "We now revisit the Boston data, we already know from [Chapter 3](03_Data-Exploration) and build a linear regression for the data. We compare the results of OLS, Ridge, Lasso, and the Elastic Net. We use $\\alpha=0.5$ as regularization strength and $\\rho=0.25$ as ratio between Ridge and Lasso for the Elastic Net. The bar charts show how the coefficients change. "
+    "We now revisit the Boston data, we already know from [Chapter 3](03_Data-Exploration) and create a Linear Regression for the data. We compare the results of OLS, Ridge, Lasso, and the Elastic Net. We use $\\alpha=0.5$ as regularization strength and $\\rho=0.25$ as ratio between Ridge and Lasso for the Elastic Net. The bar charts show how the coefficients change. "
    ]
   },
   {
