--- a/content/00_Preface.ipynb
+++ b/content/00_Preface.ipynb
@@ -57,8 +57,8 @@
     "- Chapter 5: Finished.\n",
     "- Chapter 6: Finished.\n",
     "- Chapter 7: Finished.\n",
-    "- Chapter 8: Draft finished, requires proof reading.\n",
-    "- Chapter 9: Draft finished, requires proof reading.\n",
+    "- Chapter 8: Finished.\n",
+    "- Chapter 9: Finished.\n",
     "- Chapter 10: Draft finished, requires proof reading.\n",
     "- Chapter 11: Draft finished, requires proof reading.\n",
     "- Chapter 12: Not available.\n",
