fixed some smaller issues in the notebooks to prepare pdf generation

--- a/content/03_Data-Exploration.ipynb
+++ b/content/03_Data-Exploration.ipynb
@@ -87,7 +87,7 @@
     "The arithmetic mean can easily be described in the natural language. It is the sum of all values divided by the number of values. The arithmetic mean is a good choice to describe the central tendency of data that follows a normal or a uniform distribution. In general, the arithmetic mean works reasonable well as long as 1) the data is without \"holes\", i.e., without large intermittent regions without values, including outliers, and 2) the data is symmetric around the the arithmetic mean, i.e., the *spread* of the data on the left and the right side of the mean is similar. Thus, the arithmetic mean only works well if assumptions on the distribution of the data are met. Statistical methods that make such assumptions are called *parametric* statistics and may be misleading in case the assumptions are not fulfilled. We will show examples that demonstrate how the mean value can be misleading through [Anscombe's quartet](#anscombe's-quartet).\n",
     "\n",
     "An alternative to the mean value is the *median* which is defined as\n",
-    "$$median(x) = \\cases{\\bar{x}_{m} & if $n$ is odd with $m=\\frac{n+1}{2}$ \\\\ \\frac{1}{2}(\\bar{x}_{m}+\\bar{x}_{m+1}) & if $n$ is even with $m=\\frac{n}{2}$}$$\n",
+    "$$median(x) = \\begin{cases}\\bar{x}_{m} & \\text{if}~n~\\text{is odd with}~m=\\frac{n+1}{2} \\\\ \\frac{1}{2}(\\bar{x}_{m}+\\bar{x}_{m+1}) & \\text{if}~n~\\text{is even with}~m=\\frac{n}{2}\\end{cases}$$\n",
     "\n",
     "where $\\bar{x}$ are the values of $x$ sorted by their size. Thus, the median is the middle value in the data: 50% of the data is less than or equal to the median, 50% of the median is greater than or equal to the median. The median is a *non-parametric* statistic, i.e., the median works for any distribution of data. Thus, the median can be used instead of the arithmetic mean if the assumptions on the distribution for the arithmetic mean to be meaningful are not met. \n",
     "\n",
@@ -187,12 +187,15 @@
     "The variability measures how far the data is spread out. A small variability means that most data is close to the central tendency of the data. A high variability means that the data is spread out over a large range. \n",
     "\n",
     "The most common measure for the variability is the *standard deviation*, which is defined as\n",
+    "\n",
     "$$sd(x) = \\sqrt{\\frac{\\sum_{i=1}^n (x_i-mean(x))^2}{n-1}}.$$\n",
     "\n",
     "The standard deviation is the square root of the arithmetic mean of the difference from the arithmetic mean, except that the division is by $n-1$ instead of $n$. This is due to something called *degrees of freedom*, which we do not discuss here further. The standard deviation tells us how much deviation from the mean value we can expect. The standard deviation works well as a measure for the variability, when the mean value is a suitable representation for the central tendency. This means that the standard deviation is also a *parametric* measure for the variability, that can also be misleading.\n",
     "\n",
     "Same as the median is the non-parametric counterpart to the arithmetic mean, there are also non-parametric statistics for the variability. The *interquartile range* is defined as\n",
+    "\n",
     "$$IQR(X) = Q_{upper}-Q_{lower}$$\n",
+    "\n",
     "where $Q_{upper}$ is the upper quartile and $Q_{lower}$ is the lower quartile. The upper quartile and lower quartile are defined analogously to the median, but with 75% and 25% of the data. This means that for the upper quartile, 75% of the data are less than or equal to $Q_{upper}$ and 25% are greater than or equal to $Q_{upper}$. For the lower quartile, 25% of the data are less than or equal to $Q_{lower}$ and 75% of the the data are greater than or equal to $Q_{lower}$. It follows that at least 50% of the data is within the interquartile range. \n",
     "\n",
     "In general, you should not use the standard deviation, when you use the median. Below is the example we already used to demonstrate that the arithmetic mean is not robust with respect to outliers. "
@@ -256,6 +259,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
+    "hide_input": true,
     "tags": [
      "hide_input"
     ]
@@ -1472,7 +1476,7 @@
   }
  ],
  "metadata": {
-  "celltoolbar": "Tags",
+  "celltoolbar": "Edit Metadata",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
