--- a/content/07_Classification.ipynb
+++ b/content/07_Classification.ipynb
@@ -32,7 +32,13 @@
     "\n",
     "Formally, we have a set of objects $O = \\{object_1, object_2, ...\\}$ that may be infinite. Moreover, we have representations of these objects in a feature space $\\mathcal{F} = \\{\\phi(o): o \\in O\\}$ and a finite set of classes $C = \\{class_1, ..., class_n\\}$. \n",
     "\n",
-    "The classification is defined by a *target concept* that maps objects to classes, i.e.,  $$h^*: O \\to C.$$ The target concept is our ground truth, i.e., a perfect assignment of objects to the classes. Usually, we have no mathematical description for the target concept. For example, there is no such mathematical description for the classification of images as whale pictures and bear pictures. The *hypothesis* maps features to classes $$h: \\mathcal{F} \\to C.$$ The hypothesis is determined by a classification algorithm with the goal to approximate the target concept such that $$h^*(o) \\approx h(\\phi(o)).$$\n",
+    "The classification is defined by a *target concept* that maps objects to classes, i.e.,  $$h^*: O \\to C.$$ The target concept is our ground truth, i.e., a perfect assignment of objects to the classes. Usually, we have no mathematical description for the target concept. For example, there is no such mathematical description for the classification of images as whale pictures and bear pictures. The *hypothesis* maps features to classes\n",
+    "\n",
+    "$$h: \\mathcal{F} \\to C.$$\n",
+    "\n",
+    "The hypothesis is determined by a classification algorithm with the goal to approximate the target concept such that \n",
+    "\n",
+    "$$h^*(o) \\approx h(\\phi(o)).$$\n",
     "\n",
     "### Scores\n",
     "\n",
@@ -58,7 +64,7 @@
     "\n",
     "because the sum of the probabilities is one. Because it is sufficient to use the scoring function for the $positive$, we use the notation $h'(x) = h_{positive}$ for binary classification. In this case, we can also use a *threshold* $t \\in [0,1]$ to determine the classes from the scoring function instead of just taking the class with the highest score. If $h'(x) \\geq t$, $x$ is positive, if the score is less than the threshold it is negative, i.e., \n",
     "\n",
-    "$$h_t(x) = \\cases{ positive & if $h'(x) \\geq t$ \\\\ negative & if $h' < t$ }$$\n",
+    "$$h_t(x) = \\begin{cases}\\text{positive} & \\text{if}~h'(x) \\geq t \\\\ \\text{negative} & \\text{if}~h' < t\\end{cases}$$\n",
     "\n",
     "Why thresholds and scoring functions are important for classification is best demonstrated through an example. The histogram below shows the scores of instances of a spam detection simulation where positive means that an email is spam. "
    ]
@@ -1112,9 +1118,9 @@
     "\n",
     "$$\n",
     "\\begin{split}\n",
-    "&\\ln \\frac{P(Y=c)}{1-P(Y=c)} &= b_0 + b_1x_1 + ... + b_mx_m \\\\\n",
-    "\\Rightarrow\\quad &\\frac{P(Y=c)}{1-P(Y=c)} &= \\exp( b_0 + b_1x_1 + ... + b_mx_m ) \\\\\n",
-    "\\Rightarrow\\quad &odds(c) &= \\exp( b_0 ) \\cdot \\Pi_{i=1}^m \\exp(b_ix_i) \\\\\n",
+    "&\\ln \\frac{P(Y=c)}{1-P(Y=c)} = b_0 + b_1x_1 + ... + b_mx_m \\\\\n",
+    "\\Rightarrow\\quad &\\frac{P(Y=c)}{1-P(Y=c)} = \\exp( b_0 + b_1x_1 + ... + b_mx_m ) \\\\\n",
+    "\\Rightarrow\\quad &odds(c) = \\exp( b_0 ) \\cdot \\Pi_{i=1}^m \\exp(b_ix_i) \\\\\n",
     "\\end{split}\n",
     "$$\n",
     "\n",
@@ -1517,7 +1523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 3,
    "metadata": {
     "tags": [
      "hide_input"
@@ -1814,7 +1820,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x7f6c2c6c65c0>"
+       "<graphviz.dot.Digraph at 0x7f9bd435aa20>"
       ]
      },
      "metadata": {},
@@ -1852,7 +1858,7 @@
     "# Fully connected network between layers\n",
     "for i in range(1,4):\n",
     "    for j in range(1,5):\n",
-    "        network.edge('x_%i' % i, 'f1_%i' % j, label=label)\n",
+    "        network.edge('x_%i' % i, 'f1_%i' % j)\n",
     "for i in range(1,5):\n",
     "    for j in range(1,5):\n",
     "        network.edge('f1_%i' % i, 'f2_%i' % j)\n",
@@ -1864,7 +1870,8 @@
     "for i in range(1,4):\n",
     "    network.edge('f1_%i' % i, 'f1_%i' % (i+1), style='invis')\n",
     "    network.edge('f2_%i' % i, 'f2_%i' % (i+1), style='invis')\n",
-    "    \n",
+    "\n",
+    "network.format = 'png'\n",
     "# Visualize the graph\n",
     "display(network)"
    ]
