--- a/content/04_Data-Analysis-Overview.ipynb
+++ b/content/04_Data-Analysis-Overview.ipynb
@@ -72,9 +72,9 @@
     "Many machine learning algorithms require that features must be represented numerically. While this is the native representation of features on interval and ratio scales, nominal and ordinal features are not numeric. A naive approach would be to just assign each category a number, e.g, black is 1, white is 2, blue is 3. This naive approach is very dangerous, because it would be possible for algorithms to, e.g., calculate the difference between black and white as 2, which does not make sense at all. A better solution is to use a *one-hot encoding*. The concept behind the one-hot encoding is to expand a nominal/ordinal scale into multiple nominal scales with the values 0 and 1. Each category of the original scale gets its own expanded scale, the value of the new feature is 1, if an instance is of that category, and 0 otherwise. \n",
     "\n",
     "For example, consider a feature with a nominal scale with values black, white and blue, i.e., $x \\in \\{black, white, blue\\}$. We expand this feature into three new features, i.e., $x^{black}, x^{white}, x^{blue} \\in \\{0,1\\}$. The values of the new features are:\n",
-    "$$x^{black} = \\cases{1 & if $x=black$ \\\\ 0 & otherwise}$$\n",
-    "$$x^{white} = \\cases{1 & if $x=white$ \\\\ 0 & otherwise}$$\n",
-    "$$x^{blue} = \\cases{1 & if $x=blue$ \\\\ 0 & otherwise}$$\n",
+    "$$x^{black} = \\begin{cases}1 & \\text{if}~x=\\text{black} \\\\ 0 & \\text{otherwise}\\end{cases}$$\n",
+    "$$x^{white} = \\begin{cases}1 & \\text{if}~x=\\text{white} \\\\ 0 & \\text{otherwise}\\end{cases}$$\n",
+    "$$x^{blue} =  \\begin{cases}1 & \\text{if}~x=\\text{blue}  \\\\ 0 & \\text{otherwise}\\end{cases}$$\n",
     "\n",
     "With the approach above, we need $n$ new categories, if the scale of our original feature has $n$ distinct values. In the example above, we have three new features for a scale with three values. It is also possible to use one-hot encoding with $n-1$ new features. We could just leave out $x^{blue}$ from our example and still always know when the value would have been blue: when it is neither black nor white, i.e., when $x^{black}=x^{white}=0$. This is especially useful to convert scales with exactly two values. Please note that while one-hot encoding is a useful approach, it does not work well if you have lots of categories, because a lot of new features are introduced. Moreover, the order of ordinal features is lost, i.e., we loose information when one-hot encoding is used for ordinal features. \n",
     "\n",
