--- a/content/05_Association-Rule-Mining.ipynb
+++ b/content/05_Association-Rule-Mining.ipynb
@@ -331,13 +331,25 @@
     "\n",
     "An open question is how we may decide if these rules are good or not. Thus, we need measures to identify if the associations are meaningful or if they are just the result of random effects. This cannot be decided based on the support alone. For example, consider a Web shop with free items. These items are likely in very many baskets. Thus, they will be part of many frequent itemsets. However, we cannot really conclude anything from this item, because it is just added randomly because it is free, not because it is associated with other items. Moreover, the support of a rule $X \\Rightarrow Y$ is always the same as for the rule $Y \\Rightarrow X$. However, there may be differences, because causal associations are often directed. The measures of *confidence*, *lift*, and *leverage* can be used to see if a rule a is random or if there is really an association. \n",
     "\n",
-    "The confidence of a rule is defined as $$confidence(X \\Rightarrow Y) = \\frac{support(X \\cup Y)}{support(X)},$$\n",
+    "The confidence of a rule is defined as\n",
+    "\n",
+    "$$confidence(X \\Rightarrow Y) = \\frac{support(X \\cup Y)}{support(X)},$$\n",
+    "\n",
+    "\n",
     "i.e. the confidence is the ratio of observing the antecedent and the consequent together in relation to only the transactions that contain $X$. A high confidence indicates that the consequent often occurs when the antecedent is in a transaction. \n",
     "\n",
-    "The lift of a rule is defined as $$lift(X \\Rightarrow Y) = \\frac{support(X \\cup Y)}{support(X) \\cdot support(Y)}.$$\n",
+    "The lift of a rule is defined as\n",
+    "\n",
+    "$$lift(X \\Rightarrow Y) = \\frac{support(X \\cup Y)}{support(X) \\cdot support(Y)}.$$\n",
+    "\n",
+    "\n",
     "The lift measures the ratio between how often the antecedent and the consequent are observed together and how often they would be expected to be observed together, given their individual support. The denominator is the expected value, given that antecedent and consequent are independent of each other. Thus, a lift of 2 means, that $X$ and $Y$ occur twice as often together, as would be expected if there was no association between the two.  If the antecedent and the consequent are completely independent of each other, the lift is 1. \n",
     "\n",
-    "The leverage of a rule is defined as $$leverage(X \\Rightarrow Y) = support(X \\cup Y) - support(X) \\cdot support(Y).$$\n",
+    "The leverage of a rule is defined as\n",
+    "\n",
+    "$$leverage(X \\Rightarrow Y) = support(X \\cup Y) - support(X) \\cdot support(Y).$$\n",
+    "\n",
+    "\n",
     "This definition is almost the same as for the lift, except that the difference is used instead of the ratio. Thus, there is a close relationship between lift and leverage. In general, leverage slightly favors itemsets with larger support. \n",
     "\n",
     "To better understand how the confidence, lift, and leverage work, we look at the values for the rules we derived from the itemset $\\{item2, item3, item4\\}$. "
@@ -497,7 +509,11 @@
     "\n",
     "### Exponential Growth\n",
     "\n",
-    "We have now shown how we can determine rules: we need to find frequent itemsets and can then derive rules from these sets. Unfortunately, finding the frequent itemsets is not trivial. The problem is that the number of itemsets grows exponentially with the number of items. The possible itemsets are the powerset $\\mathcal{P}$ of $I$, which means there are $|\\mathcal{P}(I)|=2^{|I|}$ possible itemsets. Obviously, there are only very few use cases, where we would really need to consider all items, because often shorter rules are preferable. Unfortunately, the growth is still exponential, even if we restrict the size. We can use the binomial coefficient $${|I| \\choose k} = \\frac{|I|!}{(|I|-k)!k!}$$\n",
+    "We have now shown how we can determine rules: we need to find frequent itemsets and can then derive rules from these sets. Unfortunately, finding the frequent itemsets is not trivial. The problem is that the number of itemsets grows exponentially with the number of items. The possible itemsets are the powerset $\\mathcal{P}$ of $I$, which means there are $|\\mathcal{P}(I)|=2^{|I|}$ possible itemsets. Obviously, there are only very few use cases, where we would really need to consider all items, because often shorter rules are preferable. Unfortunately, the growth is still exponential, even if we restrict the size. We can use the binomial coefficient\n",
+    "\n",
+    "$${|I| \\choose k} = \\frac{|I|!}{(|I|-k)!k!}$$\n",
+    "\n",
+    "\n",
     "to calculate the number of itemsets of size k. For example, if we have |I|=100 items, there are already 161,700 possible itemsets of size $k=3$. We can generate eight rules for each of these itemsets, thus we already have 1,293,600 possible rules. If we ignore rules with the empty itemset, we still have 970,200 possible rules. \n",
     "\n",
     "Thus, we need a way to search the possible itemsets strategically to deal with the exponential nature, as attempt to find association rules could easily run out of memory or require massive amounts of computational resources, otherwise. \n",
