--- a/content/11_Statistics.ipynb
+++ b/content/11_Statistics.ipynb
@@ -434,7 +434,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -561,11 +560,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Same as the p-value, the confidence interval is often misinterpreted. The correct interpretation of a $C%$ confidence interval is, e.g., one of the following. \n",
+    "Same as the p-value, the confidence interval is often misinterpreted. The correct interpretation of a $C\\%$ confidence interval is, e.g., one of the following. \n",
     "\n",
     "- There is a $C\\%$ chance that the results of future replications of the same experiment fall into $\\theta$.\n",
     "- There is no statistically significant different of the estimated parameter for all values within $\\theta$ with a $C\\%$ confidence.\n",
