updated preface with link to pdf

--- a/content/00_Preface.ipynb
+++ b/content/00_Preface.ipynb
@@ -6,9 +6,11 @@
    "source": [
     "# Preface\n",
     "\n",
-    "Welcome to the online book *Introduction to Data Science*. This book is created to provide a great resource for asynchronous online learning to deal with the current pandemic, where physical lectures are not possible and not all participants may be able to attend lectures, e.g., due to health issues or just because you have to care of a kid. \n",
+    "Welcome to the online book *Introduction to Data Science*. This book is created to provide a great resource for asynchronous online learning to deal with the current pandemic, where physical lectures are not possible and not all participants may be able to attend lectures, e.g., due to health issues or just because you have to care of a kid.\n",
     "\n",
     "However, this online book is more than just a short term fix due to the pandemic. This book is an interactive guide for getting started with data science. All code that is used, e.g., to perform analysis or to create visualizations is included and can be re-used by anyone.\n",
+    "\n",
+    "The book is provided both [online](https://sherbold.github.io/intro-to-data-science/) and as a [PDF for printing](pdf/introductiontodatascience.pdf).\n",
     "\n",
     "## Target audience\n",
     "\n",
@@ -64,8 +66,11 @@
     "- Chapter 12: Not available.\n",
     "- Exercises: Work in progress.\n",
     "- Appendix: Work in progress.\n",
-    "- General layout issues: \n",
-    " - Need to determine if overflows for verbatim output of code cells can be prevented. \n",
+    "\n",
+    "Open Layout Issues:\n",
+    "\n",
+    " - Need to determine if overflows for verbatim output of code cells can be prevented in the HTML. \n",
+    " - Some issues in the PDF (e.g., HTML tables)\n",
     "\n",
     "If you find problems (e.g., spelling errors in chapters that are already proof read, blunders on my part like wrong formulas, or similar), please [open an issue on GitHub](https://github.com/sherbold/intro-to-data-science/issues)."
    ]
