--- a/content/00_Preface.ipynb
+++ b/content/00_Preface.ipynb
@@ -61,16 +61,17 @@
     "- Chapter 7: Finished.\n",
     "- Chapter 8: Finished.\n",
     "- Chapter 9: Finished.\n",
-    "- Chapter 10: Draft finished, requires proof reading.\n",
-    "- Chapter 11: Draft finished, requires proof reading.\n",
-    "- Chapter 12: Not available.\n",
-    "- Exercises: Work in progress.\n",
+    "- Chapter 10: Finished.\n",
+    "- Chapter 11: Finished.\n",
+    "- Chapter 12: Work in progress.\n",
+    "- Exercises: Finished.\n",
+    "- Solutions: Finished.\n",
     "- Appendix: Work in progress.\n",
     "\n",
     "Open Layout Issues:\n",
     "\n",
-    " - Need to determine if overflows for verbatim output of code cells can be prevented in the HTML. \n",
-    " - Some issues in the PDF (e.g., HTML tables)\n",
+    "- Need to determine if overflows for verbatim output of code cells can be prevented in the HTML. \n",
+    "- Some issues in the PDF (e.g., HTML tables)\n",
     "\n",
     "If you find problems (e.g., spelling errors in chapters that are already proof read, blunders on my part like wrong formulas, or similar), please [open an issue on GitHub](https://github.com/sherbold/intro-to-data-science/issues)."
    ]
